<?xml version="1.0" encoding="UTF-8"?>
<project    xmlns="http://maven.apache.org/POM/4.0.0"
            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
            xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                                https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.dgp-eu</groupId>
    <artifactId>software_releases</artifactId>
    <version>1.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>software_releases</name>
    <description>Software Releases management served on the webUI using embeded Undertow server</description>
    <url>https://github.com/dgp-eu/software_releases</url>

    <licenses>
        <license>
            <name>Eclipse Public License - v 2.0</name>
            <url>https://www.eclipse.org/org/documents/epl-2.0/EPL-2.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>dgp.eu</id>
            <name>Daniel-Gheorghe Popiniuc</name>
            <email>danielpopiniuc@gmail.com</email>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>+2</timezone>
            <organization>dgp-eu</organization>
            <organizationUrl>https://github.com/dgp-eu</organizationUrl>
        </developer>
    </developers>

    <properties>
        <!-- File encoding properties -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- Build properties -->
        <java.version>26</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <sonar.organization>dgp-eu</sonar.organization>
        <!-- Dependency versions -->
        <tools.version>1.2.1-SNAPSHOT</tools.version>
        <jackson-databind.version>3.2.1</jackson-databind.version>
        <junit-jupiter.version>6.1.3</junit-jupiter.version>
        <oshi-core-ffm.version>7.4.4</oshi-core-ffm.version>
        <!-- Build Plugin versions -->
        <central-publishing-maven-plugin.version>0.11.0</central-publishing-maven-plugin.version>
        <jacoco-maven-plugin.version>0.8.15</jacoco-maven-plugin.version>
        <maven-antrun-plugin.version>3.2.0</maven-antrun-plugin.version>
        <maven-assembly-plugin.version>3.8.0</maven-assembly-plugin.version>
        <maven-enforcer-plugin.version>3.6.3</maven-enforcer-plugin.version>
        <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
        <maven-surefire-plugin.version>3.5.6</maven-surefire-plugin.version>
        <takari-lifecycle-plugin.version>2.3.4</takari-lifecycle-plugin.version>
        <versions-maven-plugin.version>2.21.0</versions-maven-plugin.version>
    </properties>

    <dependencies>
        <!-- Source: https://github.com/oshi/oshi -->
        <!-- Binaries: https://repo1.maven.org/maven2/com/github/oshi/oshi-core-ffm -->
        <!-- Description: A JNA-based (native) operating system information library for Java that aims to provide a cross-platform implementation to retrieve system information, such as version, memory, CPU, disk, battery, etc. -->
        <!-- oshi-core implementation using FFM -->
        <dependency>
            <groupId>com.github.oshi</groupId>
            <artifactId>oshi-core-ffm</artifactId>
            <version>${oshi-core-ffm.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.dgp-eu</groupId>
            <artifactId>tools-core</artifactId>
            <version>${tools.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.dgp-eu</groupId>
            <artifactId>tools-cli</artifactId>
            <version>${tools.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.dgp-eu</groupId>
            <artifactId>tools-databases</artifactId>
            <version>${tools.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.dgp-eu</groupId>
            <artifactId>tools-json</artifactId>
            <version>${tools.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.dgp-eu</groupId>
            <artifactId>tools-undertow</artifactId>
            <version>${tools.version}</version>
        </dependency>
        <!-- Test dependencies -->
        <!-- Source: https://junit.org/ -->
        <!-- Binaries: https://repo1.maven.org/maven2/org/junit/jupiter/junit-jupiter -->
        <!-- Description: Module "junit-jupiter" of JUnit -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit-jupiter.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Source: https://github.com/takari/takari-lifecycle/releases -->
            <!-- Binaries: https://repo1.maven.org/maven2/io/takari/maven/plugins/takari-lifecycle-plugin -->
            <!-- Description: Takari Lifecycle Plugin -->
            <plugin>
                <groupId>io.takari.maven.plugins</groupId>
                <artifactId>takari-lifecycle-plugin</artifactId>
                <version>${takari-lifecycle-plugin.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <sourceJar>true</sourceJar>
                    <testJar>false</testJar>
                    <verbose>false</verbose>
                </configuration>
            </plugin>
            <!-- Source: https://maven.apache.org/plugins/maven-antrun-plugin/ -->
            <!-- Binaries: https://repo1.maven.org/maven2/org/apache/maven/plugins/maven-antrun-plugin -->
            <!-- Description: Runs Ant scripts embedded in the POM -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>${maven-antrun-plugin.version}</version>
                <executions>
                    <execution>
                        <id>copy-pom-as-metadata</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target name="copy-and-rename-pom">
                                <copy file="${basedir}/pom.xml"
                                      tofile="${project.build.outputDirectory}/software-releases-pom.xml"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Source: https://maven.apache.org/plugins/maven-gpg-plugin/ -->
            <!-- Binaries: https://repo1.maven.org/maven2/org/apache/maven/plugins/maven-gpg-plugin -->
            <!-- Description: Signs the project artifacts with GnuPG. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven-gpg-plugin.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <passphraseEnvName>MAVEN_GPG_PASSPHRASE</passphraseEnvName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Source: https://maven.apache.org/plugins/maven-javadoc-plugin/download.cgi -->
            <!-- Binaries: https://repo1.maven.org/maven2/org/apache/maven/plugins/maven-javadoc-plugin -->
            <!-- Description: The Apache Maven Javadoc Plugin is a plugin that uses the javadoc tool for generating javadocs for the specified project. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doclint>none</doclint>
                </configuration>
            </plugin>
            <!-- Source: https://maven.apache.org/surefire/maven-surefire-plugin/ -->
            <!-- Binaries: https://repo1.maven.org/maven2/org/apache/maven/plugins/maven-surefire-plugin -->
            <!-- Description: Maven Surefire MOJO in maven-surefire-plugin. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
                    </systemPropertyVariables>
                    <argLine>@{argLine} --enable-native-access=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <!-- Source: https://www.jacoco.org/jacoco/trunk/doc/maven.html -->
            <!-- Binaries: https://repo1.maven.org/maven2/org/jacoco/jacoco-maven-plugin -->
            <!-- Description: he JaCoCo Maven Plugin provides the JaCoCo runtime agent to your tests and allows basic report creation. -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Website: https://central.sonatype.org/ -->
            <!-- Binaries: https://repo1.maven.org/maven2/org/sonatype/central/central-publishing-maven-plugin/ -->
            <!-- Description: This project is a maven plugin for publishing components in Maven Central, for more details on its usage see https://central.sonatype.org/publish/publish-portal-maven -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${central-publishing-maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                    <waitUntil>published</waitUntil>
                </configuration>
            </plugin>
            <!-- Source: https://github.com/apache/maven-enforcer/tree/enforcer-3.6.3/maven-enforcer-plugin -->
            <!-- Binaries: https://repo1.maven.org/maven2/org/codehaus/mojo/versions-maven-plugin -->
            <!-- Description: The Loving Iron Fist of Maven -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>26.0.2</version>
                                </requireJavaVersion>
                            </rules>    
                        </configuration>
                    </execution>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.9,3.10]</version>
                                </requireMavenVersion>
                            </rules>    
                        </configuration>
                    </execution>
                    <execution>
                        <id>enforce-no-snapshots</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireReleaseDeps>
                                    <message>No Snapshots Allowed!</message>
                                </requireReleaseDeps>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Source: https://www.mojohaus.org/versions/ -->
            <!-- Binaries: https://repo1.maven.org/maven2/org/codehaus/mojo/versions-maven-plugin -->
            <!-- Description: The Versions Maven Plugin is used when you want to manage the versions of artifacts in a project's POM. -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin.version}</version>
                <configuration>
                    <ignoredVersions type="regex">(?i).*[-_.](alpha|b|beta|rc|cr|milestone|m|ea|preview|snapshot)-?[-_.0-9]*</ignoredVersions>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <excludes>
                    <exclude>**/*.sqlite</exclude>
                </excludes>
            </resource>
        </resources>
    </build>

    <distributionManagement>
        <repository>
            <id>central</id>
            <url>https://central.sonatype.com/api/v1/publisher</url>
        </repository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>local</id>
            <activation>
                <property>
                    <name>!release</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <version>${maven-assembly-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>make-fat-jar</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                                <configuration>
                                    <descriptorRefs>
                                        <descriptorRef>jar-with-dependencies</descriptorRef>
                                    </descriptorRefs>
                                    <archive>
                                        <manifest>
                                            <mainClass>io.github.dgp_eu.software_releases.ApplicationSoftwareReleases</mainClass>
                                        </manifest>
                                    </archive>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
